# cookiejar

./: .gitignore  README.md  dfx.json  next.config.js  package-lock.json  package.json  tailwind.config.ts
src/app/: globals.css  layout.tsx  page.tsx
src/assets/: .ic-assets.json
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/components/: AddressCard.tsx  ClaimButton.tsx  ConnectButton.tsx  Form.tsx  InitiateClaim.tsx  InternetIdentity.tsx  LoadingCard.tsx
src/context/: Web3Modal.tsx
src/declarations/backend/: backend.did.d.ts  backend.did.js  index.js
src/declarations/frontend/: index.js
src/declarations/internet_identity/: index.js
