[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1"
candid = "0.10.2"
ic-cdk = "0.12.0"
hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
ethers-core = "2.0.11"
serde_json = "1.0.111"